# dotfiles

./: .actrc  .coverage  .debug_cache.json  .envrc  .gitignore  .gitmodules  .repology_cache.json  .rgignore  .secrets  :memory:  AGENTS.md  Archfile  Brewfile  Brewfile-darwin  Brewfile-darwin-disabled  Brewfile-overrides  CLAUDE.md  Distroboxfile  Flatfile  Fontfile  INSTALL.md  LICENSE  README.md  TESTING.md  VSExtensionsFile  bootstrap.sh  cleanup_runtimes.sh  coverage.xml  devenv.nix  hyprpanel dependencies for arch.txt  install.sh  justfile  package_mappings.toml  pyproject.toml  repology_cache.json  state of pkg mgmt.md  temp_packages.toml  test.sh  test_cache.json  uninstall_test_runtimes.sh  (+1 more)
.github/workflows/: ci.yml  refresh-package-cache.yml
docs/: BITWARDEN.md  CLAUDE.md  INTEGRATION_TEST_MIGRATION_PLAN.md  PACKAGE_OPTIMIZATION_PROMPT.md  TAGGING.md  TAGGING_EXAMPLES.md  act-testing.md  state of pkg mgmt.md
git/: gitignore.symlink
home/: .chezmoi.toml.tmpl  .chezmoiignore.tmpl  AGENTS.md  dot_bash_profile  dot_bashrc  dot_justfile.tmpl  dot_vimrc  dot_zshenv.tmpl  private_dot_zshenv.tmpl
home/.chezmoidata/: packages.yaml
home/.chezmoiscripts/: run_onchange_after_200-check-package-mappings.sh.tmpl  run_onchange_after_300-install-dependencies.sh.tmpl  run_onchange_after_400-execute-install-flow.sh.tmpl  run_onchange_after_nix-custom-conf.sh.tmpl
home/Development/: biome.jsonc
home/dot_bashrc.d/: 001_bob_vim.sh  999_secrets.sh.tmpl
home/dot_claude/: settings.json  settings.json.tmpl
home/dot_gsd/: defaults.json
home/dot_lazyssh/: private_metadata.json
home/private_dot_config/: starship.toml  syncthingtray.ini
home/private_dot_gnupg/: gpg-agent.conf.tmpl
home/private_dot_hermes/: private_config.yaml  private_config.yaml.tmpl
home/private_dot_ssh/: private_allowed_signers.tmpl  private_authorized_keys.tmpl  private_config.tmpl  private_id_ed25519.tmpl  private_readonly_cattivi_unifi.tmpl  private_readonly_github_ed25519.tmpl  private_readonly_id_ed25519.tmpl  readonly_cattivi_unifi.pub.tmpl  readonly_github_ed25519.pub.tmpl  readonly_id_ed25519.pub.tmpl
lib/: tagged_package_filter.py
lib/bootstrap/: detect-distro.sh  install-bitwarden.sh  install-chezmoi.sh  install-homebrew.sh  setup-bitwarden.sh
lib/common/: all.sh  homebrew_utils.sh  logging.sh  packages.sh  run_with_homebrew_env.sh  system_environment.sh
lib/development/: check_dependencies.sh  fix_ssl_issues.sh
lib/install/: InstallerNotes.md  arch.sh  aria2c_brew.sh  bitwarden_services.sh  chezmoi.sh  claude_code.sh  custom.sh  flatpak_apps.sh  fonts.sh  github.sh  homebrew_packages.sh  install-chezmoi.sh  install-prerequisites.sh  install_arch.sh  install_bitwarden.sh  install_bitwarden_services.sh  install_chezmoi.sh  install_claude_code.sh  install_common.sh  install_distroboxes.sh  install_flatpaks.sh  (+19 more)
macos/: set-defaults.sh
test_output/: Brewfile
tests/: .direct_test_cache.json  README.md  test_custom_install.py  test_github_actions.py  test_homebrew_client.py  test_package_analysis.py  test_package_generators.py  test_package_integration.py  test_package_management.sh  test_tagging_system.py  test_toml_formatting.py
zsh/: fpath.zsh  zshrc.symlink
(+194 files in other folders)
